--- a/manifest.json
+++ b/manifest.json
@@ -34,6 +34,12 @@
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
+  "web_accessible_resources": [
+    {
+      "resources": ["icons/*"],
+      "matches": ["<all_urls>"]
+    }
+  ],
   "commands": {
     "capture-normal": {
       "suggested_key": {
